# upgradecontract

./: Cargo.toml  Makefile  README.md  note
messenger/: Cargo.toml
messenger/src/: assert_message.rs  messenger_v1_disable.rs  messenger_v1_install.rs  messenger_v2_upgrade.rs
tests/: Cargo.toml
