[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "1.4.2", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.0.2", features = ["test-support"] }
casper-execution-engine = "1.4.2"
casper-types = "1.4.4"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

